   - "Full" network optimization flag was broken since Surf++
   - Better handling of precision flags in maxmin
   - Fix bug causing sometimes "Impossible" errors
   - Properly pass cluster properties to included hosts
  * Improvement of the Energy plugin.
    - Always update the consumption before returning that value
    - New property: watt_off to denote the disipation when the host is off
 XBT
  * New functions
   - Add a xbt_heap_update function, to avoid costly xbt_heap_remove+xbt_heap_insert use 
   - Add a xbt wrapper for simcall_mutex_trylock (asked in [#17878])
   - Add two new log appenders : rollfile and splitfile. Patch by Fabien Chaix.
 Build System
  * Tracing is now always enabled (no way to turn it out)
  * Move headers around to sort them out on installed systems:
    - instr/instr.h  -> simgrid/instr.h
    - instr/jedule/* -> simgrid/jedule
    - simdag/datatypes.h was removed
    - simdag/simdag.h -> simgrid/simdag.h
    - msg/datatypes.h was removed
    - msg/msg.h -> simgrid/msg.h

 -- $date Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>

SimGrid (3.11) stable; urgency=low

 The Class Release.

 Tools:
 * Normalizing pointers addresses tool for better diff between logs

 Examples:
 * Add cloud examples using new VMs
   - examples/msg/cloud/two_tasks_vm.tesh
   - examples/msg/cloud/simple_vm.tesh
   - examples/java/cloud/cloud.tesh
   - examples/java/cloud/migration/migration.tesh
 * Add java surf examples:
   - examples/java/surfPlugin/surf_plugin.tesh
   - examples/java/reservationSurfPlugin/reservation_surf_plugin.tes
   - examples/java/surfCpuModel/surf_cpu_model.tesh
 * Add SMPI+MSG example:
   - examples/smpi/smpi_msg_masterslave/

 TeshSuite:
 * Add tests:
   - msg process test
   - msg task destroy cancel test
   - msg_host on/off test
 * Move all tests in testsuite to teshsuite (adding tesh files)
 * Restructure teshsuites
   - one folder for each kind of test
 * Restructure AddTests.cmake
   - unify tests names